fix: thumbnail layout overflow

--- a/src/list/list.css
+++ b/src/list/list.css
@@ -230,6 +230,7 @@ nav {
     position: absolute;
     width: 100%;
     bottom: 0;
+    box-sizing: border-box;
 }
 
 .align-right {
